# IndieStudio

./: .gitignore  CMakeLists.txt  Indie.cpp  Main.cpp  Makefile  NewMain.cpp  README.md  build.sh
.github/workflows/: action.yml
Documentation/: Doxyfile  create_doc  doxygen_config
Documentation/html/: _a_object_8cpp_source.html  _a_object_8hpp_source.html  _a_scene_8cpp_source.html  _a_scene_8hpp_source.html  _bullet_8cpp_source.html  _bullet_8hpp_source.html  _button_8cpp_source.html  _button_8hpp_source.html  _cannon_8cpp_source.html  _cannon_8hpp_source.html  _collisionable_object_8cpp_source.html  _collisionable_object_8hpp_source.html  _core_8cpp_source.html  _core_8hpp_source.html  _destructible_object_8cpp_source.html  _destructible_object_8hpp_source.html  _destructible_wall_8cpp_source.html  _destructible_wall_8hpp_source.html  _error_8cpp_source.html  _error_8hpp_source.html  _i_object_8hpp_source.html  _i_scene_8hpp_source.html  _map_8cpp_source.html  _map_8hpp_source.html  _movable_object_8cpp_source.html  _movable_object_8hpp_source.html  _raylib_8cpp_source.html  _raylib_8hpp_source.html  _raylib_error_8cpp_source.html  _raylib_error_8hpp_source.html  _scene_board_8cpp_source.html  _scene_board_8hpp_source.html  _scene_maxime_8cpp_source.html  _scene_maxime_8hpp_source.html  _scene_menu_8cpp_source.html  _scene_menu_8hpp_source.html  _scene_new_game_8cpp_source.html  _scene_new_game_8hpp_source.html  _scene_option_8cpp_source.html  _scene_option_8hpp_source.html  (+188 more)
Documentation/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  (+3 more)
Documentation/latex/: annotated.tex  class_a_object.tex  class_a_object__coll__graph.md5  class_a_object__inherit__graph.md5  class_a_scene.tex  class_a_scene__coll__graph.md5  class_a_scene__inherit__graph.md5  class_bullet.tex  class_bullet__coll__graph.md5  class_bullet__inherit__graph.md5  class_button.tex  class_cannon.tex  class_cannon__coll__graph.md5  class_cannon__inherit__graph.md5  class_collisionable.tex  class_collisionable_object.tex  class_collisionable_object__coll__graph.md5  class_collisionable_object__inherit__graph.md5  class_destructible.tex  class_destructible_object.tex  class_destructible_object__coll__graph.md5  class_destructible_object__inherit__graph.md5  class_destructible_wall.tex  class_destructible_wall__coll__graph.md5  class_destructible_wall__inherit__graph.md5  class_error.tex  class_error__coll__graph.md5  class_error__inherit__graph.md5  class_i_object.tex  class_i_object__inherit__graph.md5  class_i_scene.tex  class_i_scene__inherit__graph.md5  class_map.tex  class_movable.tex  class_movable_object.tex  class_movable_object__coll__graph.md5  class_movable_object__inherit__graph.md5  class_raylib.tex  class_raylib_error.tex  class_raylib_error__coll__graph.md5  (+30 more)
Error/: Error.cpp
asset/Animation/dance/: DanceAnim.iqm
asset/Animation/idle/: idle.iqm  idleAnimation.iqm
asset/Tank/: bullet.mtl  bullet.obj.mtl  tankBody.mtl  tankBodyNEW.mlp  tankBodyNEW.obj.mtl  turretWithCannon.mtl  turretWithCannonNEW.obj.mtl
asset/box/source/: box.fbx
asset/box_test/: box_fix.mlp
asset/wooden_box/: wooden crate.mtl
src/Core/: Core.cpp  Core.hpp  Setting.cpp  Setting.hpp  Settings.hpp
src/Error/: Error.cpp  Error.hpp  RaylibError.cpp  RaylibError.hpp
src/Map/: Map.cpp  Map.hpp
src/Object/: AObject.cpp  AObject.hpp  DestroyableObject.cpp  DestroyableObject.hpp  IObject.hpp  Objects_UML_Diagram  Particles.cpp  Particles.hpp  TypeObject.hpp
src/Object/Button/: Button.cpp  Button.hpp
src/Object/Collisionable/: CollisionableObject.cpp  CollisionableObject.hpp  DestructibleWall.cpp  DestructibleWall.hpp  Wall.cpp  Wall.hpp
src/Object/Collisionable/Destructible/: DestructibleObject.cpp  DestructibleObject.hpp  DestructibleWall.cpp  DestructibleWall.hpp
src/Object/Collisionable/Destructible/Movable/: Bullet.cpp  Bullet.hpp  Cannon.cpp  Cannon.hpp  MovableObject.cpp  MovableObject.hpp  Tank.cpp  Tank.hpp  TankAi.cpp  TankAi.hpp  TankIa.cpp  TankIa.hpp
src/Object/Collisionable/Movable/: MovableObject.cpp  MovableObject.hpp  Tank.cpp  Tank.hpp
src/Object/Collisionable/PowerUps/: PowerUps.cpp  PowerUps.hpp
src/Object/Collisionable/Wall/: Wall.cpp  Wall.hpp
src/Object/Ground/: Ground.cpp  Ground.hpp
src/Object/UiObject/: UiObject.cpp  UiObject.hpp
src/Object/UiObject/Button/: BoolButton.cpp  BoolButton.hpp  Button.cpp  Button.hpp
src/Object/UiObject/Button/InputBox/: InputBox.cpp  InputBox.hpp
src/Object/UiObject/UiGame/: BorderPlayer.cpp  BorderPlayer.hpp  ColorPlayer.cpp  ColorPlayer.hpp  FrameUI.cpp  FrameUI.hpp  FullSquare.cpp  FullSquare.hpp  LifeGame.cpp  LifeGame.hpp  RectangleUI.cpp  RectangleUI.hpp  Score.cpp  Score.hpp  TexteUi.cpp  TexteUi.hpp  UiGame.cpp  UiGame.hpp
src/Player/: Player.cpp  Player.hpp
src/Raylib/: Raylib.cpp  Raylib.hpp
src/Raylib/RayAudio/: RayMusic.cpp  RayMusic.hpp  RaySound.cpp  RaySound.hpp
src/Raylib/RayObj/: IRayObj.hpp  RayModel.cpp  RayModel.hpp  RaySquare.cpp  RaySquare.hpp  RayText.cpp  RayText.hpp  RayTexture2D.cpp  RayTexture2D.hpp
src/RaylibEncapsulation/: RaylibEncapsulation.cpp  RaylibEncapsulation.hpp
src/Scene/: AScene.cpp  AScene.hpp  IScene.hpp  Keys.hpp  SceneBoard.cpp  SceneBoard.hpp  SceneGame.cpp  SceneGame.hpp  SceneIntro.cpp  SceneIntro.hpp  SceneMaxime.cpp  SceneMaxime.hpp  SceneMenu.cpp  SceneMenu.hpp  SceneNewGame.cpp  SceneNewGame.hpp  SceneOption.cpp  SceneOption.hpp  ScenePause.cpp  ScenePause.hpp  SceneRobin.cpp  SceneRobin.hpp  SceneSplash.cpp  SceneSplash.hpp  SceneTest.cpp  SceneTest.hpp  SceneWin.cpp  SceneWin.hpp  UiScene.cpp  UiScene.hpp
(+4 files in other folders)
